# pdf-summarizer

./: .dockerignore  .env.docker  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: pr-checks.yml  sbom-check.yml
docker/: Dockerfile.dev  nginx-lb.conf
docs/: ADR_RECOMMENDATIONS.md  README.md  database.md
docs/adr/: 0001-use-flask-as-web-framework.md  0002-use-sqlite-with-sqlalchemy-orm.md  0003-use-uv-as-package-manager.md  0004-use-anthropic-claude-api.md  0005-monolithic-application-architecture.md  0006-sha256-hash-based-caching.md  0007-session-based-user-tracking.md  0008-store-files-on-filesystem.md  0009-use-apscheduler-for-background-jobs.md  0010-use-flask-limiter-for-rate-limiting.md  0011-multi-file-logging-strategy.md  0012-in-memory-sqlite-for-testing.md  0013-use-ruff-and-black.md  0014-implement-sbom-generation.md  README.md  template.md
src/pdf_summarizer/: __init__.py  claude_service.py  cleanup.py  config.py  error_handlers.py  extensions.py  factory.py  forms.py  logging_config.py  main.py  models.py  routes.py  utils.py
src/pdf_summarizer/static/css/: style.css
src/pdf_summarizer/static/js/: main.js
src/pdf_summarizer/templates/: base.html  index.html  results.html
src/pdf_summarizer/templates/errors/: 404.html  429.html  500.html
src/pdf_summarizer/templates/prompts/: form.html  list.html
templates/: base.html  results.html
templates/errors/: 404.html
tests/: __init__.py  conftest.py  test_caching.py  test_cleanup.py  test_config.py  test_error_handlers.py  test_forms.py  test_helpers.py  test_integration.py  test_logging.py  test_models.py  test_routes.py  test_session.py
tests/fixtures/: __init__.py
